Added Fiend Fire & Fixed Havoc visual bug
Havoc used .length() instead of Str.lengthIgnoringEscSeqs() when calculating when to show the card popup, so it was off-center.